#div-search-organization margin correction

--- a/css/mobile_360px.css
+++ b/css/mobile_360px.css
@@ -53,7 +53,7 @@
         height: 146px;
         background-color: #FEAF3D;
         border-radius: 8px;
-        margin-bottom: 37px;
+        margin: 0 auto 37px auto;
     }
     
     #div-search {
