--- a/css/mobile_360px.css
+++ b/css/mobile_360px.css
@@ -64,7 +64,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        color:#FFFFFF;
+        color:#757575;
         font-family: "Open Sans";
         font-size: 12px;
         margin: 30px auto 19px auto;
