footer width alteration

--- a/css/mobile_360px.css
+++ b/css/mobile_360px.css
@@ -430,7 +430,7 @@
         background-color: #422755;
         height: 126px;
         justify-content: center;
-        width: 360px;
+        width: 100%;
         height: 126px;
         text-align: center;
         margin: auto;
